@@ -1,5 +1,11 @@
 2020-11-09  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* libpoke/pkl-gen.c (pkl_gen_ps_return_stmt): Do not pop
+	environment frames before RETURN, as it is not needed.
+	(pkl_gen_ps_func): Likewise.
+
+2020-11-09  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* libpoke/pkl-gen.c (pkl_gen_ps_func): Do not leak a frame in the
 	dynamic lexical environment when raising no_return exception.
 
